--- a/GameDevRecipes.UI/src/app/components/add-video/add-video.component.html
+++ b/GameDevRecipes.UI/src/app/components/add-video/add-video.component.html
@@ -1,1 +1,26 @@
-<p>add-video works!</p>
+<div class="container">
+    <h1>Add new video</h1>
+    <div class="row">
+        <div class="col-4">
+            <!-- <form #forms="ngForm" (ngSubmit)="addVideo()">
+                <div class="mb-3">
+                  <label for="videoId"  class="form-label">Youtube Link</label>
+                  <input type="text" placeholder="Copy and Paste a youtube link here!" class="form-control" id="videoId" name="videoId" [(ngModel)] = "newVideo.videoId">
+                </div>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </form> -->
+            <form #forms="ngForm" (ngSubmit)="addVideo()">
+                <div class="mb-3">
+                  <label for="videoId" class="form-label">Youtube Link</label>
+                  <input type="text" placeholder="Copy and Paste a youtube link here!" class="form-control" id="videoId"
+                    name="videoId" [(ngModel)]="newVideo.videoId" (input)="validateInput()">
+                  <div *ngIf="!isValidInput" class="text-danger">Input should start with 'https://youtu.be/'</div>
+                </div>
+                <button type="submit" class="btn btn-primary" [disabled]="!isValidInput">Save</button>
+              </form>
+              
+        </div>
+    </div>
+</div>
+
+<!-- https://youtu.be/qkkM3MAd_9I -->
