removed appsettings.json

--- a/GameDevRecipes.UI/src/app/components/home/home.component.html
+++ b/GameDevRecipes.UI/src/app/components/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="Search container">
+    
+    <div class="logo">Logo will go above here</div>
+    
+    <div class="searchbar">Search bar goes here</div>
+    
+</div>
