--- a/GameDevRecipes.UI/src/app/components/videos/videos.component.css
+++ b/GameDevRecipes.UI/src/app/components/videos/videos.component.css
@@ -1,3 +1,19 @@
 .space {
     margin-left: 10px;
 }
+
+.container{
+    color: white;
+}
+
+
+
+th{
+    background-color: #202020;
+    color: white;
+}
+
+td{
+    background-color: #202020;
+    color: white;
+}
