--- a/GameDevRecipes.UI/src/app/components/home/home.component.html
+++ b/GameDevRecipes.UI/src/app/components/home/home.component.html
@@ -18,6 +18,8 @@
     </div>
 </div>
 
+
+
 <div container="video-card-container">
     <div class="card-container">
         <div class="results">
@@ -28,3 +30,6 @@
         </div>
     </div>
 </div>
+
+<!-- <button (click)="openVideoModal()">Open Video Overlay</button> -->
+<!-- <app-video-modal></app-video-modal> -->
