--- a/GameDevRecipes.UI/src/app/components/video-modal/video-modal.component.html
+++ b/GameDevRecipes.UI/src/app/components/video-modal/video-modal.component.html
@@ -1,8 +1,13 @@
 <div class="modal">
     <div class="modal-container">
         <div class="video-player-container">
-            <source>
-            <video class="video-player">Your browser does not support the video tag</video>
+            <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/YR6Q7dUz2uk"
+                frameborder="0"
+                allowfullscreen
+            ></iframe>
         </div>
         <button class="close-video-player">Close Modal</button>
     </div>
